Fix letter-spacing for buttons

--- a/src/css/actions.css
+++ b/src/css/actions.css
@@ -7,6 +7,7 @@ button {
 	margin: 0;
 	background: none;
 	font: inherit;
+	letter-spacing: inherit;
 	font-weight: 500;
 	line-height: inherit;
 	text-decoration: none;
